--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "assets/variables";
+
+body {
+  background: @primary;
+  font-family: @font-poppins;
+  margin: 0;
+  padding: 0;
+}
+
+#main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+film-card {
+  display: flex;
+}
+
+* {
+  box-sizing: border-box;
+}
